--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pandas>=1.3.0
-numpy>=1.20.0
-customtkinter>=5.0.0
-matplotlib>=3.4.0
-Pose2Sim>=1.0.0
-PySide6>=6.5.0
+pandas
+numpy
+customtkinter
+matplotlib
+Pose2Sim
+pyopengltk
+pyopengl
+pyopengl-accelerate
