--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "meditor"
 version = "0.1.0"
-description = "A 3D motion capture marker data visualization and editing tool"
+description = "A motion capture marker data visualization and editing tool"
 authors = [
     {name = "HunMin Kim", email = "hunminkim98@gmail.com"},
 ]
 readme = "README.md"
-license = { text = "MIT" } # Assuming MIT license text, adjust if file exists
+license = { text = "MIT" }
 requires-python = ">=3.10"
 keywords = ["biomechanics", "kinemaics", "marker", "editor", "Pose2Sim", "Sports2D", "mocap", "motion capture", "human pose"]
 classifiers = [
